# weather-predictions

./: .gitignore  README.md  pyproject.toml
scripts/: README.md  install_cron.sh  uninstall_cron.sh
src/weather_predictions/: backfill.py  cdo_client.py  cli.py  config.py  dashboard.py  eink_display.py  enrich.py  evaluate.py  features.py  fetch_observations.py  geo.py  home_precip_check.py  hurricane_client.py  hurricane_evaluate.py  hurricane_features.py  hurricane_predict.py  hurricane_radar.py  hurricane_train.py  lcd_client.py  mrms.py  mrms_cells.py  mrms_client.py  mrms_convlstm.py  mrms_home_check.py  mrms_image.py  mrms_nowcast.py  mrms_nowcast_evaluate.py  mrms_processing.py  mrms_qpe.py  notify.py  nws_client.py  predict.py  radar.py  radar_client.py  radar_image.py  radar_nowcast.py  radar_nowcast_evaluate.py  radar_processing.py  radar_raw.py  storage.py  (+1 more)
tests/: test_geo.py  test_home_precip_check.py  test_hurricane_client.py  test_hurricane_evaluate.py  test_hurricane_features.py  test_hurricane_predict.py  test_hurricane_storage.py  test_hurricane_train.py  test_mrms.py  test_nws_alerts.py  test_nws_hourly.py  test_pipeline.py  test_radar.py  test_radar_image.py  test_radar_nowcast.py
