[project]
name = "weather-predictions"
version = "0.1.0"
description = "NOAA/NWS-based weather data collection, training, and precipitation forecasting"
authors = [
    {name = "hiemenz",email = "kevinhiemenz1@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "typer (>=0.26.8,<0.27.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[project.scripts]
weather = "weather_predictions.cli:app"

[tool.poetry]
packages = [{include = "weather_predictions", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

# Radar decoding only — Py-ART pulls in Cartopy, which has no prebuilt ARM
# wheels and is painful to compile on a Raspberry Pi. The Pi only ever
# downloads raw scans (radar_client.py, stdlib + `aws` CLI, no Python
# geospatial deps); decoding happens on whichever machine has this group
# installed (`poetry install --with radar`).
[tool.poetry.group.radar]
optional = true

[tool.poetry.group.radar.dependencies]
arm-pyart = "^2.2.4"

# Web dashboard — FastAPI + Jinja2 served from the Pi.
[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
jinja2 = ">=3.1.0"

# ConvLSTM learned nowcasting — PyTorch with MPS support for Apple Silicon.
# CPU-only inference works on the Pi without this group installed.
[tool.poetry.group.convlstm]
optional = true

[tool.poetry.group.convlstm.dependencies]
torch = ">=2.3.0"

# MRMS national radar composite decoding — cfgrib wraps the eccodes C library
# for GRIB2 parsing. eccodes must be installed separately as a system package:
#   macOS:  brew install eccodes
#   Debian: apt install libeccodes-dev
# This group is Mac-only in practice (the Pi only displays grids that are
# fetched elsewhere); cfgrib has prebuilt wheels for both amd64 and ARM.
[tool.poetry.group.mrms]
optional = true

[tool.poetry.group.mrms.dependencies]
cfgrib = "^0.9.15"

# Nowcasting (optical flow) and e-ink image rendering — neither touches
# Py-ART/Cartopy, so this installs fine on a Pi (opencv-python-headless has
# prebuilt ARM wheels) even without the `radar` group above. Separate from
# `radar` specifically so a Pi can render/display already-decoded grids
# (synced over from wherever `--with radar` ran) without ever needing
# Cartopy.
[tool.poetry.group.display]
optional = true

[tool.poetry.group.display.dependencies]
opencv-python-headless = "^4.12.0.88"
pillow = "^11.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
